Fix layout issue on card

--- a/client/src/components/card/card.scss
+++ b/client/src/components/card/card.scss
@@ -34,6 +34,9 @@
 
 .post-content {
   padding: 1.1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
   ul {
     font-size: variables.$text-small;
